# bike_log_v2

./: .gitignore  .pdm-python  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
bikes/: admin.py  apps.py  services.py  signals.py
bikes/migrations/: 0001_initial.py  0002_rename_maintencerecord_maintenancerecord_and_more.py  0003_alter_component_max_kilometers_ride.py
bikes/models/: __init__.py  bike.py  component.py  maintenancerecord.py  ride.py
bikes/serializers/: __init__.py  bike.py  component.py
bikes/views/: __init__.py  bike.py  component.py
config/: settings.py  urls.py
